<resources>
    <string name="app_name">Resources my Devices</string>
    <string name="tvTitle">RecursosApp</string>
    <string name="tvVersionAndroidLB">1. Version Android: </string>
    <string name="tvVersionAndroid"></string>
    <string name="tvligth">2. Flashlight :</string>
    <string name="bt0n">On</string>
    <string name="btOff">Off</string>
    <string name="tvLevelBaterry">3. Level of Baterry</string>
    <string name="tvLevelBaterry_2"></string>
    <string name="tvStorage">4. Storage</string>
    <string name="ibStorage">Save File</string>
    <string name="etNameFile">Name of File</string>
    <string name="ibSaveFile">Save</string>
    <string name="tvState">5. BT Conection:</string>
    <string name="tvStateConexion"></string>
    <string name="btnBTOn">On</string>
    <string name="btnBTOff">Off</string>
</resources>