<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:background="#5C47C6BF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="646dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70">

        <TextView
            android:id="@+id/tvAndroidVersionLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tvVersionAndroidLB"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvAndroidVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvVersionAndroid"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvFlashlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvligth"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btLightOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btOff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btLightOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FF4858"
                android:text="On"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvBatteryLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvLevelBaterry"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvLevelBaterry_2"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/pbBattery"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tvStorge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvStorage"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/etNameFile"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/ibStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ibSaveFile"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvStateConexion"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvConectionLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tvState"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvConexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBTOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnBTOff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnBTOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnBTOn"
                android:backgroundTint="#00CCC0"
                android:textSize="20dp" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>